<resources>


    //placeholder strings
    <string name="ph_checkbox">CheckBox</string>
    <string name="ph_textview">TextView</string>
    <string name="ph_a">A</string>
    <string name="ph_ad">AD</string>
    <string name="ph_delete">delete</string>
    <string name="ph_name_lastname">data depan</string>
    <string name="ph_my_status">This is my status</string>
    <string name="ph_english">English</string>
    <string name="ph_my_number">My Number: 9123456789</string>
    <string name="ph_status_text">Status text:</string>
    <string name="ph_number">+38593000333</string>
    <string name="ph_date">11-08-2015</string>
    <string name="ph_abc">ABC</string>
    <string name="ph_password">*****</string>
    <string name="ph_def">DEF</string>
    <string name="ph_ghi">GHI</string>
    <string name="ph_jkl">JKL</string>
    <string name="ph_mno">MNO</string>
    <string name="ph_pqrs">PQRS</string>
    <string name="ph_tuv">TUV</string>
    <string name="ph_wxyz">WXYZ</string>
    <string name="ph_star">*</string>


    <string name="app_name">When2Call</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_favorit_tab">FavoritTabActivity</string>
    <string name="title_activity_user_registration">UserRegistrationActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_set_status">SetStatusActivity</string>
    <string name="title_activity_default_text">DefaultTextActivity</string>
    <string name="title_activity_default_text_detail">DefaultTextDetailActivity</string>
    <string name="title_activity_add_contacts">AddContactsActivity</string>
    <string name="title_activity_edit_notifications">EditNotificationsActivity</string>
    <string name="title_activity_settings_detail">SettingsDetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="asterisk">*</string>
    <string name="zero">0</string>
    <string name="hash">#</string>
    <string name="arrow_back"><![CDATA[< Back]]></string>
    <string name="backspace">&lt;</string>


    //string for translation 
    <string name="action_settings">Settings</string> 
    <string name="sign_up">SIGN UP</string>
     <string name="log_in">LOG IN</string> 
    <string name="sign_up_log_in">Sign Up/Log In</string> 
    <string name="phone_number">Phone number</string> 
    <string name="password">Password</string> 
    <string name="name">Name</string> <string name="email">Email</string> 
    <string name="fill_all_data">Please check your information</string>  

    <string name="favorites">Favorites</string>
     <string name="recents">Recents</string>
     <string name="all_contacts">Contacts</string> 
    <string name="keypad">Keypad</string>
     <string name="settings">Settings</string> 
    <string name="delete">Delete</string>
     <string name="dial">Dial</string> 
    <string name="user_already_exists">Phone number already exists</string> 
    <string name="set_status">Set status</string>
     <string name="confirm">CONFIRM</string> 
    <string name="status_updated">Status updated</string> 
    <string name="status_not_updated">Status not updated</string>

       <string name="please_try_again">Error, please try again</string> 
    <string name="status_update_error">Status not updated</string> 
    <string name="contacts">Contacts</string>
     <string name="edit">Edit</string> 
    <string name="done">Done</string>
     <string name="set_language">Set Language</string> 
    <string name="default_text">Default text</string> 
     <string name="save">Save</string>
     <string name="english">English</string> 
    <string name="danish">Danish</string>

       <string name="select_language">Select Language</string> 
    <string name="enter_correct_data">Enter correct data</string> 
    <string name="data_updated">Data is updated</string>
     <string name="add">Add</string> 
    <string name="add_new_text">Add new text</string> 
    <string name="edit_text">Edit text</string>
     <string name="add_contacts">Add Contacts</string> 
    <string name="contact_added">Contact added</string>
     <string name="contact_deleted">Contact deleted</string>
     <string name="my_number">My number</string>

       <string name="add_some_default_text">Please go to settings to add default texts</string>
     <string name="invite">Invite</string> <string name="add_contact">Add Contact</string> 
    <string name="set_notification">Set notification</string> 
    <string name="invite_user_text">Hi, check this app, I use it every day, When2Call</string>
     <string name="no_contact_using_app">You don\'t have any contacts yet, go to contact tab and add them</string>
     <string name="on_phone">ON PHONE</string> <string name="search">Search</string> 
    <string name="please_enable_internet">Please enable internet on your phone so you can see others status</string>
     <string name="notification_already_added">Notification added</string> 
    <string name="changed_status_to">Changed status to:</string> 

    <string name="user_changed_statuses">Users changed their status</string>   
    <string name="busy">busy</string>
     <string name="online">online</string>
     <string name="not_available">not available</string> 
    <string name="speaking">speaking</string> 
    <string name="edit_notifications">Edit notifications</string> 
    <string name="all">All</string> 
    <string name="unanswer">Unanswer</string> <string name="set">Set</string> 
    <string name="phone">Phone</string>
     <string name="select">Select</string> 
    <string name="send_message">Send message</string> 
    <string name="i_am_online_for">I’m not available between:</string> 
    <string name="set_time">Set time</string>


    //strings for translation from 17.09.2015
    <string name="i_am_online_at">I\'m online at</string>
    <string name="i_am_busy_from">I\'m busy from:</string>
    <string name="now">Now</string>
    <string name="i_am_away_from">I\'m away from:</string>
    <string name="voice_mail">Voicemail</string>
    <string name="voice_mail_number">Voicemail number:</string>

    //strings for translation from 30.09.2015
    <string name="set_red_status_to">Set red status to:</string>
    <string name="set_red_status_from">Set red status from:</string>
    <string name="set_yellow_status_from">Set yellow status from:</string>
    <string name="set_yellow_status_to">Set yellow status to:</string>
    <string name="please_enter_your_voicemail">Please enter your voicemail number in application settings</string>
    <string name="cancel">Cancel</string>
    <string name="choose_status_text">Choose status text</string>
    <string name="edit_status_text">Edit status text</string>
    <string name="remove_notifications">Remove notifications</string>
    <string name="remove_notification">Remove notification</string>
    <string name="please_correct_your_start_end_time">Please correct you start and end time</string>
    <string name="title_activity_select_language">SelectLanguageActivity</string>
    <string name="ok">Ok</string>
    <string name="clear_timer">Clear timer</string>
    <string name="enter_phone_number">Please check your phone number</string>
    <string name="enter_password">Please check your password</string>
    <string name="enter_name">Please check your name</string>
    <string name="enter_email">Please check your email</string>

</resources>
