<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="back">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="25dp"
            android:background="@android:color/black"
            android:text="@string/ph_delete"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btn_delete"
            android:background="@android:color/black"
            android:text="@string/edit"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/front"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:tag="front">


        <TextView
            android:id="@+id/front_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/ph_name_lastname"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sub_front_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/front_label"
            android:background="@color/white"
            android:text="@string/ph_my_status"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </LinearLayout>

</FrameLayout>