<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/tab_bar_background">

            <Button
                android:id="@+id/bBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/arrow_back"
                android:textAllCaps="false"
                android:textColor="@color/blue_default" />

            <Button
                android:id="@+id/bEdit"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/border_blue_corners"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="10sp"
                android:textColor="@color/nav_bar_button_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="@drawable/blue_default_circle"
                android:gravity="center"
                android:text="@string/ph_ad"
                android:textColor="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/hugh" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ivProfile"
                android:layout_toLeftOf="@+id/ibFavorit"
                android:layout_marginRight="10dp"
                android:text="@string/ph_name_lastname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/ibFavorit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/star_empty" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/phone"
            android:textColor="@color/blue_default"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ph_number"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/ibCall"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/call_icon" />

        </LinearLayout>


        <Button
            android:id="@+id/bSendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:text="@string/send_message"
            android:textAllCaps="false"
            android:textColor="@color/blue_default"
            android:textSize="14sp" />

    </LinearLayout>


    <Button
        android:id="@+id/bConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_default"
        android:text="@string/invite"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>