<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tab_bar_background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_contacts"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/blue_default"
            android:visibility="gone" />


        <ProgressBar
            android:id="@+id/pbProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:indeterminate="true"
            android:padding="10dp"
            android:visibility="visible" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/tvNoContacts"
            android:layout_width="220dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_contact_using_app"/>

    </RelativeLayout>


</LinearLayout>